force-app/main/default/objects/DealerBrandContent__c/DealerBrandContent__c.object-meta.xml
<CustomObject>
    <description>Content Related to a Dealer Brand record and an email template</description>
    <label>Dealer Brand Content</label>
    <nameField>
        <displayFormat>DBC-{00000}</displayFormat>
        <label>Dealer Brand Content Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Dealer Brand Content</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>