force-app/main/default/objects/DealerBrandContent__c/fields/Activate_Coupon_1__c.field-meta.xml
<CustomField>
    <fullName>Activate_Coupon_1__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to use a coupon for this email</inlineHelpText>
    <label>Activate Coupon 1</label>
    <type>Checkbox</type>
</CustomField>