force-app/main/default/objects/DealerBrandContent__c/fields/Activate_Coupon_2__c.field-meta.xml
<CustomField>
    <fullName>Activate_Coupon_2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Activate Coupon 2</label>
    <type>Checkbox</type>
</CustomField>