force-app/main/default/objects/DealerBrandContent__c/fields/Activate_Coupon_3__c.field-meta.xml
<CustomField>
    <fullName>Activate_Coupon_3__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to Activate Coupon 3 in the email</inlineHelpText>
    <label>Activate Coupon 3</label>
    <type>Checkbox</type>
</CustomField>