force-app/main/default/objects/DealerBrandContent__c/fields/Coupon_2_Offer__c.field-meta.xml
<CustomField>
    <fullName>Coupon_2_Offer__c</fullName>
    <label>Coupon 2 Offer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>