force-app/main/default/objects/DealerBrandContent__c/fields/Coupon_3_Header_Text__c.field-meta.xml
<CustomField>
    <fullName>Coupon_3_Header_Text__c</fullName>
    <label>Coupon 3 Header Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>