force-app/main/default/objects/DealerBrandContent__c/fields/Coupon_3_Offer__c.field-meta.xml
<CustomField>
    <fullName>Coupon_3_Offer__c</fullName>
    <label>Coupon 3 Offer</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>