force-app/main/default/objects/DealerBrandContent__c/fields/Dealer_Brand__c.field-meta.xml
<CustomField>
    <fullName>Dealer_Brand__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <inlineHelpText>Dealer and Brand record this record is associated with</inlineHelpText>
    <label>Dealer Brand</label>
    <referenceTo>DealerBrands__c</referenceTo>
    <relationshipLabel>Dealer Brand Email Content</relationshipLabel>
    <relationshipName>Dealer_Brand_Content</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>