force-app/main/default/objects/DealerBrandContent__c/fields/Email_Name__c.field-meta.xml
<CustomField>
    <fullName>Email_Name__c</fullName>
    <inlineHelpText>Choose which email template this record is associated with</inlineHelpText>
    <label>Email Name</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Birthday Email</fullName>
            </value>
            <value>
                <fullName>Lost Soul</fullName>
            </value>
            <value>
                <fullName>Missed Service Email</fullName>
            </value>
            <value>
                <fullName>Service Appointment Reminder</fullName>
            </value>
            <value>
                <fullName>Service Reimbursement</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>