force-app/main/default/objects/DealerBrandContent__c/fields/Override_Primary_Heading__c.field-meta.xml
<CustomField>
    <fullName>Override_Primary_Heading__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use the Primary Heading of this record</inlineHelpText>
    <label>Override Primary Heading</label>
    <type>Checkbox</type>
</CustomField>