force-app/main/default/objects/DealerBrandContent__c/fields/Override_Primary_Text__c.field-meta.xml
<CustomField>
    <fullName>Override_Primary_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Use Primary Text to override the default Primary text</inlineHelpText>
    <label>Override Primary Text</label>
    <type>Checkbox</type>
</CustomField>