force-app/main/default/objects/DealerBrandContent__c/fields/Override_Secondary_Text__c.field-meta.xml
<CustomField>
    <fullName>Override_Secondary_Text__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Check to override the default Secondary text with the Secondary Text field below</inlineHelpText>
    <label>Override Secondary Text</label>
    <type>Checkbox</type>
</CustomField>