force-app/main/default/objects/DealerBrandContent__c/fields/Primary_Heading__c.field-meta.xml
<CustomField>
    <fullName>Primary_Heading__c</fullName>
    <inlineHelpText>Text that will appear as the primary heading</inlineHelpText>
    <label>Primary Heading</label>
    <length>255</length>
    <type>Text</type>
</CustomField>