force-app/main/default/objects/DealerBrandContent__c/fields/Primary_Text__c.field-meta.xml
<CustomField>
    <fullName>Primary_Text__c</fullName>
    <label>Primary Text</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>