force-app/main/default/objects/DealerBrandContent__c/fields/Secondary_Text__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Text__c</fullName>
    <inlineHelpText>Text that will override the default secondary text for the email</inlineHelpText>
    <label>Secondary Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>