force-app/main/default/objects/DealerBrandContent__c/recordTypes/Birthday_Email.recordType-meta.xml
<RecordType>
    <fullName>Birthday_Email</fullName>
    <active>true</active>
    <label>Birthday Email</label>
</RecordType>