force-app/main/default/objects/DealerBrandContent__c/recordTypes/Lost_Soul.recordType-meta.xml
<RecordType>
    <fullName>Lost_Soul</fullName>
    <active>true</active>
    <label>Lost Soul</label>
</RecordType>