force-app/main/default/objects/DealerBrandContent__c/recordTypes/Missed_Service_Email.recordType-meta.xml
<RecordType>
    <fullName>Missed_Service_Email</fullName>
    <active>true</active>
    <label>Missed Service Email</label>
</RecordType>