force-app/main/default/objects/DealerBrandContent__c/recordTypes/Service_Appointment_Reminder.recordType-meta.xml
<RecordType>
    <fullName>Service_Appointment_Reminder</fullName>
    <active>true</active>
    <label>Service Appointment Reminder</label>
</RecordType>