force-app/main/default/objects/DealerBrandContent__c/recordTypes/Service_Reimbursement.recordType-meta.xml
<RecordType>
    <fullName>Service_Reimbursement</fullName>
    <active>true</active>
    <label>Service Reimbursement</label>
</RecordType>